[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn01.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn02.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn17.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn03.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn04.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn05.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn07.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn06.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn08.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn12.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn11.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn10.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn09.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn13.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn15.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn14.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Menu/in_game_pawn_select/pawn16.png" type="Texture" id=17]
[ext_resource path="res://Menus/Parts/Scripts/M77-In_Game_Pawn_Menu.gd" type="Script" id=18]

[node name="Pawn_Menu" type="HBoxContainer"]
grow_vertical = 2
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pawn00" type="TextureRect" parent="."]
visible = false
margin_right = 225.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Pawn01" type="TextureRect" parent="."]
visible = false
margin_right = 225.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Pawn02" type="TextureRect" parent="."]
visible = false
margin_left = 229.0
margin_right = 454.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Pawn03" type="TextureRect" parent="."]
visible = false
margin_left = 458.0
margin_right = 683.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="Pawn04" type="TextureRect" parent="."]
visible = false
margin_left = 687.0
margin_right = 912.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="Pawn05" type="TextureRect" parent="."]
visible = false
margin_left = 916.0
margin_right = 1141.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="Pawn06" type="TextureRect" parent="."]
visible = false
margin_left = 1145.0
margin_right = 1370.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="Pawn07" type="TextureRect" parent="."]
visible = false
margin_left = 1374.0
margin_right = 1599.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="Pawn08" type="TextureRect" parent="."]
visible = false
margin_left = 1603.0
margin_right = 1828.0
margin_bottom = 40.0
texture = ExtResource( 9 )

[node name="Pawn09" type="TextureRect" parent="."]
margin_right = 225.0
margin_bottom = 40.0
texture = ExtResource( 13 )

[node name="Pawn10" type="TextureRect" parent="."]
visible = false
margin_right = 225.0
margin_bottom = 40.0
texture = ExtResource( 12 )

[node name="Pawn11" type="TextureRect" parent="."]
visible = false
margin_right = 225.0
margin_bottom = 40.0
texture = ExtResource( 11 )

[node name="Pawn12" type="TextureRect" parent="."]
visible = false
margin_right = 225.0
margin_bottom = 40.0
texture = ExtResource( 10 )

[node name="Pawn13" type="TextureRect" parent="."]
visible = false
margin_left = 229.0
margin_right = 454.0
margin_bottom = 40.0
texture = ExtResource( 14 )

[node name="Pawn14" type="TextureRect" parent="."]
visible = false
margin_left = 458.0
margin_right = 683.0
margin_bottom = 40.0
texture = ExtResource( 16 )

[node name="Pawn15" type="TextureRect" parent="."]
visible = false
margin_left = 687.0
margin_right = 912.0
margin_bottom = 40.0
texture = ExtResource( 15 )

[node name="Pawn16" type="TextureRect" parent="."]
visible = false
margin_left = 916.0
margin_right = 1141.0
margin_bottom = 40.0
texture = ExtResource( 17 )
